# chessBot

./: .gitignore  README.md
backend/: README.md
backend/chessBackend/: Cargo.toml
backend/chessBackend/src/: action_space.rs  environment.rs  evals.rs  exploration.rs  main.rs  model.rs  state.rs  training.rs
backend/chessBackend/src/agents/: agent_traits.rs  minimax.rs  minimax_agent.rs  mod.rs  module.rs  random_agent.rs  rl_agent.rs
backend/chessBackend/src/agents/alphazero/: MCTS.rs  aNN.rs  alphazero.md  chessNN.rs  encoder_decoder.rs  main.rs
backend/chessBackend/src/api/: handlers.rs  mod.rs  types.rs
backend/chessBackend/src/utils/: fen.rs  mod.rs  notation.rs
backend/src/: main.rs
chess-frontend/: package-lock.json  package.json
chess-frontend/src/: App.css  App.tsx  index.css
tiny-backend/: .gitignore  README.md  requirements.txt  server.py  setup.sh
tiny-backend/helpers/: chess_bitboard.py  setup_local_tinygrad.py  test_tinygrad.py
tiny-backend/tiny-ml/: README.md  encoding.py  mcts.py  model.py  play.py  test_engine.py  test_training.py  train.py
wandb/: latest-run
wandb/run-20250707_185942-02kavi84/: run-02kavi84.wandb
wandb/run-20250707_190157-uwpk6p9v/: run-uwpk6p9v.wandb
wandb/run-20250707_190602-n577r6bb/: run-n577r6bb.wandb
wandb/run-20250707_190630-nbzh5cui/: run-nbzh5cui.wandb
wandb/run-20250707_191522-hx1zp5dq/: run-hx1zp5dq.wandb
wandb/run-20250707_192128-p1wk1944/: run-p1wk1944.wandb
wandb/run-20250707_213526-6ow7gray/: run-6ow7gray.wandb
wandb/run-20250707_213606-1vfsj7fx/: run-1vfsj7fx.wandb
(+48 files in other folders)
