[package]
name = "chessBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.16.0", features = ["wgpu"] }
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors"] }
